--- a/styles/pages/weather.css
+++ b/styles/pages/weather.css
@@ -1,4 +1,3 @@
-/* Специфичные стили для страницы погоды */
 .weather-container {
     max-width: 600px;
     width: 100%;
@@ -191,6 +190,7 @@
 .recent-cities {
     background: rgba(255, 255, 255, 0.95);
     border-radius: 20px;
+	margin-top: 2rem;
     padding: 2rem;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
