--- a/src/styles/pages/europeana.css
+++ b/src/styles/pages/europeana.css
@@ -39,7 +39,7 @@ body {
     background: #fafafa;
 }
 
-#paintingImage {
+.painting-image {
     max-width: 100%;
     max-height: 70vh;
     border: 1px solid #ddd;
